<?xml version="1.0"?>
<package format="2">
  <name>tams_tts</name>
  <version>1.0.0</version>
  <description>The tams_pr2_tts package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>load_venv</depend>
  <export>
    <load_venv requirements="${prefix}/requirements.txt" />
  </export>
</package>
